Fixed the overflow problem. I was stupid and had put 'overflow:hidden' in the css for <html>/<body> which was dumb. I also fixed the loading error for the empty.gif

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,6 @@
 html, body {
 	width: 100%;
 	margin: 0px;
-	overflow: hidden;
 }
 
 div {
@@ -99,7 +98,7 @@ img {
 
   /* edit: fixes overlap error in IE7/8, 
      make sure you have an empty gif */
-  background-image: url('empty.gif');
+  background-image: url('images/empty.gif');
 }
 
 .relative {
